# level1_imageclassification-cv-20

./: .flake8  .gitignore  Dataset.py  Untitled.ipynb  app.py  config.yaml  deit.ipynb  label_maker.ipynb  pyproject.toml  readme.md  submission.csv  train.py  train_data.csv
data_loader/: data_loader.py
loss/: loss.py
model/: model.py
util/: cutmix.py  util.py
우진/: customed_train_data.csv  evaluation.py  test.py
재민/: resnet50-2.ipynb
지훈/: main.ipynb  pyproject.toml  readme.md
지훈/base_line_codes/: evaluation.py  label_maker.py  model.py  train.py
